
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed issues with User Group update page
- Added modAccessPermission class to properly handle access policy permissions
- Adjusted UI to handle model change
- Added logic in setup install to clear sessions table after install to prevent access permission changing problems (and is a good general practice anyway); users will have to re-login after setup/ is run.
- Cleaned up access policy grid
- Default sort roles by authority
- Removed no-longer needed Security pages; now done in Access Control and User Group edit screens
- Started cleanup of Security system; changed 'Authority' listing on User Group page to a more correct "Minimum Role".
- Added some IDs to resource edit page
- [#MODX-1124] Took Templates off the list of attachable elements in Tools | Property Sets

MODx Revolution 2.0.0-beta-3 (LastChangedRevision: 5593, LastChangedDate: 2009-07-30 11:14:17 -0500 (Thu, 30 Jul 2009))
====================================
- Fixed issue with scrollbars and height in tree context menus
- [#MODX-963] Fixed issue with scrollbars and height in grid context menus
- Fixed possible error in lang.js.php
- [#MODX-982] Added param stringLiterals to directory/getList processor
- [#MODX-978] Updated PHPMailer to 2.0.4
- [#MODX-960] Fixed DOM issue with User Group creation/editing screen
- Added ability to drag/drop files in file tree into fields
- Fixed issue with file tree hiding files
- [#MODX-960] Fixed erroneous header in Manage User Groups and Roles
- [#MODX-965] Removed Disabled field from Package grid since it currently is unapplicable
- [#MODX-964] Fixed issue with toolbar buttons in package download tree by removing unneeded buttons, fixing refresh button