@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Fixed issue with Sort By dropdown in the Resource Tree
 - Fixed issues with User Group update page
 - Added modAccessPermission class to properly handle access policy permissions
 - Adjusted UI to handle model change
